Fixed layout problems with SlickSlider in WorkoutTypesList component

--- a/src/index.scss
+++ b/src/index.scss
@@ -195,3 +195,10 @@ body {
   top: 0;
   left: 0;
 }
+
+.slick-list {
+  margin: 0 -1re;
+}
+.slick-slide > div {
+  padding: 0 1rem;
+}
